--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+body {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
 nav {
     background-color: greenyellow;
+}
+
+.saya {
+    display: flex;
+    justify-content: space-evenly;
+    border: 1px solid black;
+}
+
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
